--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>بورتفوليو ثلاثي الأبعاد - Portfolio 3D</title>
+    <title>Portfolio_ Ahmed Monged</title>
   </head>
   <body>
     <div id="root"></div>
